@@ -2,20 +2,14 @@
 #  $Id$
 #
 i3_project(interfaces
-  DOCS_DIR resources/docs)
+  DOCS_DIR resources/docs
+)
 
 i3_add_library(interfaces
   private/interfaces/*.cxx
   USE_PROJECTS icetray
   USE_TOOLS boost
   )
-
-i3_test_executable(test 
-  private/test/main.cxx
-  USE_PROJECTS icetray interfaces
-  )
-
-i3_test_scripts(resources/test/*.py)
 
 i3_add_pybindings(interfaces
   private/pybindings/module.cxx
